<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="@string/start_value"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_bpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints="@string/bpm_hint"
        android:ems="3"
        android:hint="@string/bpm_hint"
        android:inputType="number"
        android:maxWidth="4sp"
        android:maxLength="4"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textBpm"
        app:layout_constraintStart_toEndOf="@+id/textBpm"
        app:layout_constraintTop_toTopOf="@+id/textBpm" />

    <TextView
        android:id="@+id/textBpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/bpm_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edit_meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:autofillHints="@string/meter_hint"
        android:ems="4"
        android:hint="@string/meter_hint"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textMeter"
        app:layout_constraintStart_toEndOf="@+id/textMeter"
        app:layout_constraintTop_toTopOf="@+id/textMeter" />

    <TextView
        android:id="@+id/textMeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter_text"
        app:layout_constraintStart_toStartOf="@+id/stop_button"
        app:layout_constraintTop_toTopOf="@+id/textBpm" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/button_start_color"
        android:onClick="onClickStart"
        android:text="@string/start_btn"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBpm" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/button_stop_color"
        android:onClick="onClickStop"
        android:text="@string/stop_btn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="165dp"
        android:layout_height="80dp"
        android:layout_marginTop="75dp"
        android:text="@string/tap_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        android:onClick="onClickTap"/>

</androidx.constraintlayout.widget.ConstraintLayout>